Cyberpunk portfolio upgrade

--- a/index.html
+++ b/index.html
@@ -1,64 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanaka Shumba Portfolio</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin:0; background:#0a0a0a; color:#f5f5f5; }
-        header { text-align:center; padding:50px 20px; background:#111; }
-        header h1 { margin:0; font-size:3em; color:#f39c12; }
-        header p { margin-top:10px; font-size:1.2em; }
-        section { padding:50px 20px; max-width:1000px; margin:auto; }
-        .about-me { display:flex; align-items:center; gap:20px; flex-wrap:wrap; }
-        .about-me img { width:250px; border-radius:10px; border:2px solid #f39c12; }
-        .about-me div { max-width:700px; }
-        h2 { color:#f39c12; margin-bottom:20px; }
-        .projects a { color:#f39c12; text-decoration:none; }
-        footer { text-align:center; padding:30px 20px; background:#111; }
-        footer a { color:#f5f5f5; text-decoration:none; margin:0 10px; }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Tanaka Shumba | Cybersecurity Portfolio</title>
+<style>
+/* === GLOBAL STYLES === */
+body {
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #0a0a0a;
+    color: #00ff99;
+    overflow-x: hidden;
+}
+
+a { color: #00ff99; text-decoration: none; }
+a:hover { color: #00ffcc; }
+
+/* === HEADER === */
+header {
+    text-align: center;
+    padding: 80px 20px 40px 20px;
+    background: linear-gradient(45deg, #001a00, #003300);
+    border-bottom: 2px solid #00ff99;
+}
+header h1 {
+    font-size: 3rem;
+    color: #00ff99;
+    text-shadow: 0 0 10px #00ff99, 0 0 20px #00ff99;
+}
+header p {
+    font-size: 1.2rem;
+    color: #33ffcc;
+}
+
+/* === ABOUT ME === */
+#about {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 60px 20px;
+    gap: 40px;
+    background: #001100;
+    border-bottom: 2px solid #00ff99;
+}
+#about img {
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+    border: 3px solid #00ff99;
+    box-shadow: 0 0 20px #00ff99, 0 0 40px #00ffcc inset;
+}
+#about div {
+    max-width: 600px;
+}
+#about h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    color: #00ffcc;
+}
+#about p {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #00ff99;
+}
+
+/* === PROJECTS === */
+#projects {
+    padding: 60px 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 30px;
+    background: #000a00;
+}
+.project-card {
+    background: rgba(0, 0, 0, 0.8);
+    border: 1px solid #00ff99;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px #00ff99, 0 0 40px #00ffcc inset;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.project-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 40px #00ff99, 0 0 60px #00ffcc inset;
+}
+.project-card h3 {
+    margin-top: 0;
+    color: #00ffcc;
+}
+.project-card p {
+    color: #33ffcc;
+}
+.project-card a {
+    color: #00ff99;
+    border: 1px solid #00ff99;
+    padding: 6px 12px;
+    border-radius: 6px;
+    display: inline-block;
+    margin-top: 10px;
+    transition: all 0.3s;
+}
+.project-card a:hover {
+    background: #00ff99;
+    color: #000;
+}
+
+/* === FOOTER === */
+footer {
+    text-align: center;
+    padding: 40px 20px;
+    background: #001100;
+    border-top: 2px solid #00ff99;
+}
+footer a { margin: 0 10px; transition: all 0.3s; }
+footer a:hover {
+    color: #00ffcc;
+    text-shadow: 0 0 10px #00ff99;
+}
+
+/* === CYBER GRID BACKGROUND ANIMATION === */
+body::before {
+    content: '';
+    position: fixed;
+    top:0; left:0; width:100%; height:100%;
+    background: repeating-linear-gradient(0deg, rgba(0,255,0,0.05), rgba(0,255,0,0.05) 1px, transparent 1px, transparent 2px),
+                repeating-linear-gradient(90deg, rgba(0,255,0,0.05), rgba(0,255,0,0.05) 1px, transparent 1px, transparent 2px);
+    z-index: 0;
+    pointer-events: none;
+    animation: gridMove 5s linear infinite;
+}
+@keyframes gridMove { 0% { background-position:0 0,0 0 } 100% { background-position:100px 100px, 100px 100px } }
+</style>
 </head>
 <body>
 
 <header>
     <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity Professional | Python | Ethical Hacking | Network Security</p>
+    <p>Cybersecurity Enthusiast | Python | Ethical Hacking | Cloud & Network Security</p>
 </header>
 
-<section class="about-me">
+<section id="about">
     <img src="images/about-me.jpg" alt="Tanaka Shumba">
     <div>
         <h2>About Me</h2>
-        <p>
-            I am a detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and currently pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Proficient in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. I enjoy analyzing logs, identifying vulnerabilities, and implementing mitigation strategies to strengthen organizational security posture.
-        </p>
+        <p>I'm a detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled in Python, Java, Wireshark, Zeek, Snort, and Nmap. My goal is to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
     </div>
 </section>
 
-<section class="projects">
-    <h2>Projects</h2>
-    <ul>
-        <li><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">Malware Analyzer</a></li>
-        <li><a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">Ethical Hacking Sim</a></li>
-        <li><a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">Cloud Security Checker</a></li>
-        <li><a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">Basic Pen Test</a></li>
-        <li><a href="https://github.com/TanakaShumba/simple-ids" target="_blank">Simple IDS</a></li>
-        <li><a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">Cybersecurity Lab Series</a></li>
-        <li><a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">Secure Hospital System</a></li>
-        <li><a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">VoIP Traffic Analyzer</a></li>
-        <li><a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">Python Network Scanner</a></li>
-        <li><a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">Healthcare System</a></li>
-    </ul>
+<section id="projects">
+    <div class="project-card">
+        <h3>Malware Analyzer</h3>
+        <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
+        <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Ethical Hacking Sim</h3>
+        <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+        <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Cloud Security Checker</h3>
+        <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+        <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Basic Pen Test</h3>
+        <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+        <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Simple IDS</h3>
+        <p>A basic IDS/IPS simulation in Python.</p>
+        <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Cybersecurity Lab Series</h3>
+        <p>Collection of Python labs for learning cybersecurity concepts.</p>
+        <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Secure Hospital System</h3>
+        <p>Python-based secure hospital management system.</p>
+        <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>VoIP Traffic Analyzer</h3>
+        <p>Python project that captures and analyzes VoIP RTP packets on a local network.</p>
+        <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Python Network Scanner</h3>
+        <p>Python project for network scanning and exploration.</p>
+        <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View Project</a>
+    </div>
+    <div class="project-card">
+        <h3>Healthcare System</h3>
+        <p>Flask-based healthcare system for appointments and payments.</p>
+        <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">View Project</a>
+    </div>
 </section>
 
 <footer>
-    <h2>Contact</h2>
-    <p>
-        <a href="mailto:tanakashumba04@gmail.com">Email</a> |
-        <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/TanakaShumba" target="_blank">GitHub</a>
-    </p>
+    <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a> |
+    <a href="https://github.com/TanakaShumba" target="_blank">GitHub</a> |
+    <a href="mailto:tanakashumba04@gmail.com">Email</a>
     <p>&copy; 2025 Tanaka Shumba</p>
 </footer>
 
