--- a/index.html
+++ b/index.html
@@ -5,158 +5,230 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanaka Shumba | Cybersecurity Portfolio</title>
 
+<!-- Particles.js -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 <style>
-  * { margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-  body { background:#0f0f0f; color:#e0f7ea; line-height:1.6; position:relative; min-height:100vh; overflow-x:hidden; }
+/* General */
+body {
+  margin:0;
+  padding:0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background: linear-gradient(135deg, #0f0f0f, #1a002f);
+  color:#e0f7ea;
+  position:relative;
+  min-height:100vh;
+  overflow-x:hidden;
+}
 
-  #particles-js { position:fixed; width:100%; height:100%; z-index:-1; top:0; left:0; }
+/* Particles background */
+#particles-js {
+  position:fixed;
+  width:100%;
+  height:100%;
+  z-index:-1;
+  top:0;
+  left:0;
+}
 
-  header { text-align:center; padding:60px 20px; z-index:1; position:relative; }
-  header h1 { font-size:3rem; color:#00cc99; }
-  header p { font-size:1.2rem; margin-top:10px; }
+/* Header */
+header {
+  text-align:center;
+  padding:60px 20px 40px;
+}
+header h1 {
+  font-size:3em;
+  color:#00ffcc;
+  text-shadow: 0 0 10px #00ffcc;
+}
+header p {
+  font-size:1.2em;
+  color:#e0f7ea;
+}
 
-  .about {
-    display:flex;
-    flex-wrap:wrap;
-    justify-content:center;
-    align-items:center;
-    padding:40px 20px;
-    gap:30px;
-    z-index:1;
-    position:relative;
-  }
-  .about img { width:180px; border-radius:50%; border:2px solid #00cc99; }
-  .about-text { max-width:600px; }
+/* About Me */
+#about {
+  display:flex;
+  flex-wrap:wrap;
+  align-items:center;
+  justify-content:center;
+  padding:40px 20px;
+}
+#about img {
+  max-width:250px;
+  border-radius:15px;
+  margin:10px;
+  box-shadow:0 0 15px #00ffcc;
+}
+#about div {
+  max-width:600px;
+  margin:10px;
+}
+#about div h2 {
+  font-size:2em;
+  color:#ff00ff;
+  text-shadow:0 0 10px #ff00ff;
+}
+#about div p {
+  font-size:1em;
+  line-height:1.6;
+}
 
-  h2 { text-align:center; font-size:2rem; margin:50px 0 20px; color:#00cc99; }
+/* Projects */
+#projects {
+  padding:40px 20px;
+  text-align:center;
+}
+#projects h2 {
+  font-size:2em;
+  color:#00ccff;
+  text-shadow:0 0 10px #00ccff;
+  margin-bottom:30px;
+}
+.project-card {
+  background: rgba(0,0,0,0.6);
+  border:1px solid #00ffcc;
+  border-radius:10px;
+  padding:20px;
+  margin:15px auto;
+  max-width:600px;
+  text-align:left;
+}
+.project-card h3 {
+  color:#ff00ff;
+  text-shadow:0 0 5px #ff00ff;
+}
+.project-card a {
+  color:#00ffcc;
+  text-decoration:none;
+}
+.project-card a:hover {
+  text-decoration:underline;
+}
 
-  .projects {
-    display:grid;
-    grid-template-columns:repeat(auto-fit, minmax(280px,1fr));
-    gap:20px;
-    padding:0 20px 50px;
-    z-index:1;
-    position:relative;
-  }
-  .project-card {
-    background:#111;
-    border-left:4px solid #00cc99;
-    padding:20px;
-    border-radius:8px;
-    transition:all 0.3s ease;
-  }
-  .project-card:hover { background:#1a1a1a; }
-  .project-card h3 { margin-bottom:10px; }
-  .project-card p { margin-bottom:15px; }
-  .project-card a {
-    text-decoration:none;
-    color:#0f0f0f;
-    background:#00cc99;
-    padding:6px 12px;
-    border-radius:4px;
-    transition:all 0.3s ease;
-  }
-  .project-card a:hover { background:#0f0f0f; color:#00cc99; border:1px solid #00cc99; }
-
-  footer { text-align:center; padding:30px 20px; font-size:0.9rem; color:#00cc99; z-index:1; position:relative; }
-  footer a { color:#00cc99; margin:0 10px; text-decoration:none; }
-  footer a:hover { text-decoration:underline; }
-
-  @media(max-width:600px) { .about { flex-direction:column; } }
+/* Footer */
+footer {
+  text-align:center;
+  padding:20px;
+  border-top:1px solid #00ffcc;
+  margin-top:40px;
+}
+footer a {
+  color:#00ffcc;
+  text-decoration:none;
+  margin:0 10px;
+}
+footer a:hover {
+  text-decoration:underline;
+}
 </style>
 </head>
 
 <body>
 
-<!-- Particle Background -->
 <div id="particles-js"></div>
 
 <header>
   <h1>Tanaka Shumba</h1>
-  <p>Cybersecurity Professional | Python, Ethical Hacking, Pen Testing</p>
+  <p>Cybersecurity Portfolio | Python, Ethical Hacking, Cloud Security, Network Monitoring</p>
 </header>
 
-<section class="about">
+<section id="about">
   <img src="images/about-me.jpg" alt="Tanaka Shumba">
-  <div class="about-text">
+  <div>
     <h2>About Me</h2>
     <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Proficient in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
   </div>
 </section>
 
-<h2>Projects</h2>
-<section class="projects">
+<section id="projects">
+  <h2>Projects</h2>
+
   <div class="project-card">
-    <h3>Malware Analyzer</h3>
-    <p>Python script to simulate analyzing suspicious files.</p>
+    <h3>malware-analyzer</h3>
+    <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
     <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Ethical Hacking Sim</h3>
-    <p>Python scripts simulating ethical hacking techniques.</p>
+    <h3>ethical-hacking-sim</h3>
+    <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
     <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Cloud Security Checker</h3>
-    <p>Simulate checking cloud configurations for security issues.</p>
+    <h3>cloud-security-checker</h3>
+    <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
     <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Basic Pen Test</h3>
-    <p>Educational penetration testing script.</p>
+    <h3>basic-pen-test</h3>
+    <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
     <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Simple IDS</h3>
-    <p>Basic IDS/IPS simulation in Python.</p>
+    <h3>simple-ids</h3>
+    <p>A basic IDS/IPS simulation in Python.</p>
     <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Cybersecurity Lab Series</h3>
-    <p>Series of Python cybersecurity labs for practice.</p>
+    <h3>cybersecurity-lab-series</h3>
+    <p>Collection of cybersecurity lab exercises and simulations.</p>
     <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Secure Hospital System</h3>
+    <h3>secure-hospital-system</h3>
     <p>Python-based secure hospital management system.</p>
     <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>VOIP Traffic Analyzer</h3>
-    <p>Analyze VoIP RTP packets on a local network.</p>
+    <h3>voip-traffic-analyzer</h3>
+    <p>Analyzes VoIP RTP packets on a local network. Safe for educational use.</p>
     <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Python Network Scanner</h3>
-    <p>Scan networks using Python.</p>
+    <h3>python-network-scanner</h3>
+    <p>Python project for network scanning.</p>
     <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View Project</a>
   </div>
+
   <div class="project-card">
-    <h3>Healthcare System</h3>
-    <p>Flask-based healthcare system for appointments and payments.</p>
+    <h3>Healthcare_System</h3>
+    <p>Flask-based healthcare management system for appointments, doctors, and payments.</p>
     <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">View Project</a>
   </div>
+
 </section>
 
 <footer>
-  <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a> |
-  <a href="https://github.com/TanakaShumba" target="_blank">GitHub</a> |
-  <a href="mailto:tanakashumba04@gmail.com">Email</a>
+  <p>
+    <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+    <a href="mailto:tanakashumba04@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+    <a href="https://github.com/TanakaShumba" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+  </p>
   <p>&copy; 2025 Tanaka Shumba</p>
 </footer>
 
-<!-- Particles.js Library -->
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script>
-particlesJS('particles-js', {
+// Particles.js config
+particlesJS("particles-js", {
   "particles": {
     "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-    "color": { "value": "#00cc99" },
+    "color": { "value": ["#00ffcc","#ff00ff","#00ccff"] },
     "shape": { "type": "circle" },
-    "opacity": { "value": 0.3 },
-    "size": { "value": 3 },
-    "line_linked": { "enable": true, "distance": 120, "color": "#00cc99", "opacity": 0.2, "width": 1 },
-    "move": { "enable": true, "speed": 1, "direction": "none", "random": false, "straight": false, "out_mode": "out" }
+    "opacity": { "value": 0.7, "random": true },
+    "size": { "value": 3, "random": true },
+    "line_linked": { "enable": true, "distance": 120, "color": "#00ffcc", "opacity": 0.4, "width": 1 },
+    "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out" }
   },
   "interactivity": {
     "detect_on": "canvas",
@@ -165,7 +237,7 @@ particlesJS('particles-js', {
       "onclick": { "enable": true, "mode": "push" }
     },
     "modes": {
-      "grab": { "distance": 140, "line_linked": { "opacity": 0.5 } },
+      "grab": { "distance": 140, "line_linked": { "opacity": 1 } },
       "push": { "particles_nb": 4 }
     }
   },
