--- a/index.html
+++ b/index.html
@@ -1,249 +1,260 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tanaka Shumba | Cybersecurity Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanaka Shumba Portfolio</title>
+    <style>
+        /* Reset */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
-<!-- Particles.js -->
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #0d0d0d;
+            color: #f0f0f0;
+            line-height: 1.6;
+            scroll-behavior: smooth;
+        }
 
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        a { text-decoration: none; color: #1e90ff; }
 
-<style>
-/* General */
-body {
-  margin:0;
-  padding:0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #0f0f0f, #1a002f);
-  color:#e0f7ea;
-  position:relative;
-  min-height:100vh;
-  overflow-x:hidden;
-}
+        header {
+            text-align: center;
+            padding: 80px 20px 40px;
+            background: linear-gradient(135deg, #0d0d0d 0%, #1a1a1a 100%);
+            border-bottom: 2px solid #1e90ff;
+        }
 
-/* Particles background */
-#particles-js {
-  position:fixed;
-  width:100%;
-  height:100%;
-  z-index:-1;
-  top:0;
-  left:0;
-}
+        header h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            color: #1e90ff;
+        }
 
-/* Header */
-header {
-  text-align:center;
-  padding:60px 20px 40px;
-}
-header h1 {
-  font-size:3em;
-  color:#00ffcc;
-  text-shadow: 0 0 10px #00ffcc;
-}
-header p {
-  font-size:1.2em;
-  color:#e0f7ea;
-}
+        header p {
+            font-size: 1.2rem;
+            max-width: 600px;
+            margin: 0 auto;
+        }
 
-/* About Me */
-#about {
-  display:flex;
-  flex-wrap:wrap;
-  align-items:center;
-  justify-content:center;
-  padding:40px 20px;
-}
-#about img {
-  max-width:250px;
-  border-radius:15px;
-  margin:10px;
-  box-shadow:0 0 15px #00ffcc;
-}
-#about div {
-  max-width:600px;
-  margin:10px;
-}
-#about div h2 {
-  font-size:2em;
-  color:#ff00ff;
-  text-shadow:0 0 10px #ff00ff;
-}
-#about div p {
-  font-size:1em;
-  line-height:1.6;
-}
+        nav {
+            background: #111;
+            display: flex;
+            justify-content: center;
+            padding: 15px;
+            border-bottom: 1px solid #1e90ff;
+        }
 
-/* Projects */
-#projects {
-  padding:40px 20px;
-  text-align:center;
-}
-#projects h2 {
-  font-size:2em;
-  color:#00ccff;
-  text-shadow:0 0 10px #00ccff;
-  margin-bottom:30px;
-}
-.project-card {
-  background: rgba(0,0,0,0.6);
-  border:1px solid #00ffcc;
-  border-radius:10px;
-  padding:20px;
-  margin:15px auto;
-  max-width:600px;
-  text-align:left;
-}
-.project-card h3 {
-  color:#ff00ff;
-  text-shadow:0 0 5px #ff00ff;
-}
-.project-card a {
-  color:#00ffcc;
-  text-decoration:none;
-}
-.project-card a:hover {
-  text-decoration:underline;
-}
+        nav a {
+            margin: 0 15px;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
 
-/* Footer */
-footer {
-  text-align:center;
-  padding:20px;
-  border-top:1px solid #00ffcc;
-  margin-top:40px;
-}
-footer a {
-  color:#00ffcc;
-  text-decoration:none;
-  margin:0 10px;
-}
-footer a:hover {
-  text-decoration:underline;
-}
-</style>
+        nav a:hover { color: #00bfff; }
+
+        section {
+            padding: 80px 20px;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
+        /* About Me */
+        #about {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #about img {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            margin-right: 40px;
+            margin-bottom: 20px;
+            border: 3px solid #1e90ff;
+        }
+
+        #about .about-text {
+            max-width: 600px;
+        }
+
+        #about h2 {
+            color: #1e90ff;
+            margin-bottom: 20px;
+        }
+
+        /* Projects */
+        #projects h2 {
+            color: #1e90ff;
+            margin-bottom: 40px;
+            text-align: center;
+        }
+
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+        }
+
+        .project-card {
+            background: #1a1a1a;
+            padding: 20px;
+            border-radius: 10px;
+            border: 1px solid #1e90ff;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 20px #1e90ff;
+        }
+
+        .project-card h3 { color: #00bfff; margin-bottom: 10px; }
+        .project-card p { margin-bottom: 10px; }
+        .project-card a { color: #1e90ff; font-weight: bold; }
+
+        /* Contact */
+        #contact h2 {
+            color: #1e90ff;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        #contact form {
+            max-width: 500px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #contact input, #contact textarea {
+            padding: 12px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            border: 1px solid #1e90ff;
+            background: #0d0d0d;
+            color: #f0f0f0;
+        }
+
+        #contact button {
+            padding: 12px;
+            background: #1e90ff;
+            border: none;
+            color: #fff;
+            font-weight: bold;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        #contact button:hover { background: #00bfff; }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #111;
+            border-top: 1px solid #1e90ff;
+        }
+
+    </style>
 </head>
-
 <body>
 
-<div id="particles-js"></div>
+    <header>
+        <h1>Tanaka Shumba</h1>
+        <p>Cybersecurity professional | Python, Network Security, Penetration Testing | Seeking opportunities to strengthen organizational security posture</p>
+    </header>
 
-<header>
-  <h1>Tanaka Shumba</h1>
-  <p>Cybersecurity Portfolio | Python, Ethical Hacking, Cloud Security, Network Monitoring</p>
-</header>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-<section id="about">
-  <img src="images/about-me.jpg" alt="Tanaka Shumba">
-  <div>
-    <h2>About Me</h2>
-    <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Proficient in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
-  </div>
-</section>
+    <!-- About Me -->
+    <section id="about">
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <div class="about-text">
+            <h2>About Me</h2>
+            <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Proficient in Python, Java, and security tools like Wireshark, Zeek, Snort, and Nmap. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
+        </div>
+    </section>
 
-<section id="projects">
-  <h2>Projects</h2>
+    <!-- Projects -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-grid">
+            <div class="project-card">
+                <h3>Malware Analyzer</h3>
+                <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
+                <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Ethical Hacking Sim</h3>
+                <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+                <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Cloud Security Checker</h3>
+                <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
+                <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Basic Pen Test</h3>
+                <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+                <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Simple IDS</h3>
+                <p>A basic IDS/IPS simulation in Python.</p>
+                <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Cybersecurity Lab Series</h3>
+                <p>Educational Python projects for cybersecurity learning.</p>
+                <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Secure Hospital System</h3>
+                <p>Python-based secure hospital management system.</p>
+                <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>VoIP Traffic Analyzer</h3>
+                <p>Python project analyzing VoIP RTP packets on a local network.</p>
+                <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Python Network Scanner</h3>
+                <p>Python project for network scanning.</p>
+                <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Healthcare System</h3>
+                <p>Flask-based simple healthcare management system.</p>
+                <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">View Project</a>
+            </div>
+        </div>
+    </section>
 
-  <div class="project-card">
-    <h3>malware-analyzer</h3>
-    <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
-    <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">View Project</a>
-  </div>
+    <!-- Contact -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form action="mailto:tanakashumba04@gmail.com" method="post" enctype="text/plain">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+        <p style="text-align:center; margin-top:20px;">LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">https://www.linkedin.com/in/tanakashumba-</a></p>
+        <p style="text-align:center;">Email: tanakashumba04@gmail.com</p>
+    </section>
 
-  <div class="project-card">
-    <h3>ethical-hacking-sim</h3>
-    <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
-    <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>cloud-security-checker</h3>
-    <p>Python script to simulate checking cloud service configurations for common security misconfigurations.</p>
-    <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>basic-pen-test</h3>
-    <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
-    <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>simple-ids</h3>
-    <p>A basic IDS/IPS simulation in Python.</p>
-    <a href="https://github.com/TanakaShumba/simple-ids" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>cybersecurity-lab-series</h3>
-    <p>Collection of cybersecurity lab exercises and simulations.</p>
-    <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>secure-hospital-system</h3>
-    <p>Python-based secure hospital management system.</p>
-    <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>voip-traffic-analyzer</h3>
-    <p>Analyzes VoIP RTP packets on a local network. Safe for educational use.</p>
-    <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>python-network-scanner</h3>
-    <p>Python project for network scanning.</p>
-    <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank">View Project</a>
-  </div>
-
-  <div class="project-card">
-    <h3>Healthcare_System</h3>
-    <p>Flask-based healthcare management system for appointments, doctors, and payments.</p>
-    <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank">View Project</a>
-  </div>
-
-</section>
-
-<footer>
-  <p>
-    <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-    <a href="mailto:tanakashumba04@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-    <a href="https://github.com/TanakaShumba" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-  </p>
-  <p>&copy; 2025 Tanaka Shumba</p>
-</footer>
-
-<script>
-// Particles.js config
-particlesJS("particles-js", {
-  "particles": {
-    "number": { "value": 80, "density": { "enable": true, "value_area": 800 } },
-    "color": { "value": ["#00ffcc","#ff00ff","#00ccff"] },
-    "shape": { "type": "circle" },
-    "opacity": { "value": 0.7, "random": true },
-    "size": { "value": 3, "random": true },
-    "line_linked": { "enable": true, "distance": 120, "color": "#00ffcc", "opacity": 0.4, "width": 1 },
-    "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "straight": false, "out_mode": "out" }
-  },
-  "interactivity": {
-    "detect_on": "canvas",
-    "events": {
-      "onhover": { "enable": true, "mode": "grab" },
-      "onclick": { "enable": true, "mode": "push" }
-    },
-    "modes": {
-      "grab": { "distance": 140, "line_linked": { "opacity": 1 } },
-      "push": { "particles_nb": 4 }
-    }
-  },
-  "retina_detect": true
-});
-</script>
+    <footer>
+        &copy; 2025 Tanaka Shumba. All rights reserved.
+    </footer>
 
 </body>
 </html>
